profile edit done

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -34,14 +34,18 @@ a
   color: black
 
 footer
-  height: 2vw
+  height: 5vh
   background-color: var(--color-main)
-  width: 99.2vw
   display: flex
   flex-direction: row
   justify-content: space-around
-  left: -50%
-  padding-top: 1vw
+  align-items: center;
+  flex-wrap: nowrap;
+  //left: -50%
+  padding-bottom: 1vh
+  width: 100%
+  p
+    font-size: 1vw
 
 #phoneerrormsg
   display: none
