--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -168,9 +168,11 @@ a
       
     
     #aboutus-hover
-      transform: translate(-50%, 5%)
+      transform: translate(-50%, 15%)
     #feedback-hover
-      transform: translate(-50%, -50%)
+      transform: translate(-50%, -35%)
+    #profile-hover
+      transform: translate(-50%, -15%)
       
       
     #event
