--- a/templates/profile_edit.pug
+++ b/templates/profile_edit.pug
@@ -28,8 +28,11 @@ html
             {% csrf_token %}
             #info
               {% if user.img %}
-              input#user-image(type="file", name="image", alt="image", src="{{ user.img.url }}")
-              //- img#user-img(src="{{ user.img.url }}")
+              label#user-img
+                input#user-image(type="file", name="image", alt="image")
+                p#editpicfilter 點擊上傳新照片
+                p#fileselectedfilter 已選擇新照片
+                img#user-img(src="{{ user.img.url }}")
               {% else %}
               #user-img
               {% endif %}
@@ -39,7 +42,9 @@ html
                 #grade {{ user.grade }}
             #description-tag
               #description-background
-                input#description(type="text", name="description", placeholder="{{ user.personal_description }}")
+                //input#description(type="text", name="description", value="{{ user.personal_description }}")
+                textarea#descriptionarea(type="text", name="description") {{ user.personal_description }}
+                
               .tag-field
                 p 個性
                 {% for personality in personality %}
@@ -47,13 +52,13 @@ html
                   p.tags {{ personality.text }}
                   
                 {% empty %}
-                p.plus-button +
-                input(type='text', name='personality')
+                //p.plus-button +
+                input(type='text', name='personality', placeholder='+', onfocus="this.placeholder = ''", onblur="this.placeholder = '+'")
                 {% endfor %}
 
                 {% if personality %}
-                p.plus-button +
-                input(type='text', name='personality')
+                //p.plus-button +
+                input(type='text', name='personality', placeholder='+', onfocus="this.placeholder = ''", onblur="this.placeholder = '+'")
                 {% endif %}
 
               .tag-field
@@ -62,13 +67,13 @@ html
                 .tag-style
                   p.tags {{ skill.text }}
                 {% empty %}
-                p.plus-button +
-                input(type='text', name='skill')
+                //p.plus-button +
+                input(type='text', name='skill', placeholder='+', onfocus="this.placeholder = ''", onblur="this.placeholder = '+'")
                 {% endfor %}
 
                 {% if skill %}
-                p.plus-button +
-                input(type='text', name='skill')
+                //p.plus-button +
+                input(type='text', name='skill', placeholder='+', onfocus="this.placeholder = ''", onblur="this.placeholder = '+'")
                 {% endif %}
 
               .tag-field
@@ -77,20 +82,21 @@ html
                 .tag-style
                   p.tags {{ interest.text }}
                 {% empty %}
-                p.plus-button +
-                input(type='text', name='interest')
+                //p.plus-button +
+                input(type='text', name='interest', placeholder='+', onfocus="this.placeholder = ''", onblur="this.placeholder = '+'")
                 {% endfor %}
 
                 {% if interest %}
-                p.plus-button +
-                input(type='text', name='interest')
+                //p.plus-button +
+                input(type='text', name='interest', placeholder='+', onfocus="this.placeholder = ''", onblur="this.placeholder = '+'")
                 {% endif %}
 
               #buttons
                 
                 {% if request.user.is_authenticated and request.user.pk == user.user.pk %}
                 //a(href="/logout/") 登出
-                input(type='submit') 完成
+                input(type='submit', value="送出")
+                a(href="{% url 'profile' id=request.user.userextend.pk %}") 取消
                 {% else %}
                 input(type="button", value="建立連結")
                 input(type="button", value="傳訊息")
