modify some sass

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -27,7 +27,7 @@ input, textarea, button, select, a
   -webkit-tap-highlight-color: rgba(255, 228 ,220, 0.5)
 
 body
-  background-color: white
+  background-color: #FFF6ED
 
 a
   text-decoration: none
@@ -85,7 +85,7 @@ footer
   top: 10%
   left: 50%
   bottom: 0%
-  background-color: white
+  background-color: #FFF6ED
   margin: 5vw auto 5vw auto
 
   #create
@@ -420,7 +420,7 @@ footer
       margin-left: 9vw
       
       #event-title
-        font-size: 2vw
+        font-size: 1.8vw
         font-weight: 900
         
       #event-date
@@ -633,7 +633,7 @@ footer
         flex-wrap: nowrap;
         justify-content: flex-start;
         align-items: center;
-        height: 20vw
+        height: 16vw
         overflow: hidden
         .member
           width: 3vw
