--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -24,7 +24,7 @@
   margin: 0
 
 body
-  background-color:#FAAD95
+  background-color: #FFF6ED
   width: 100%
   height: 100%
 
@@ -141,7 +141,7 @@ body
 
 #sign-up-panel
   background-color: #FFCFBF
-  border: 1.5px solid #FFFFFF
+  border: 0.2vw solid #FFFFFF
   box-shadow: 5px 10px 25px 0px #00000026
   border-radius: 3vh
   display: flex
@@ -244,7 +244,7 @@ body
 
 #login-panel
   background-color: #FFCFBF
-  border: 1.5px solid #FFFFFF
+  border: 0.2vw solid #FFFFFF
   box-shadow: 5px 10px 25px 0px #00000026
   border-radius: 3vh
   display: flex
