--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -116,6 +116,7 @@ footer
       border-radius: 3vw
       width: auto
       padding: 1.5vw
+      border: solid 2px #FFCFBF
       
       #info
         display: flex
@@ -312,8 +313,7 @@ footer
     background-color: white
     border-radius: 1.5vw
     padding: 1.5vw 1vw
-    border: solid 2px
-    border-color: #FFCFBF
+    border: solid 2px #FFCFBF
 
     p
       font-size: 1.2vw
