--- a/templates/login.pug
+++ b/templates/login.pug
@@ -63,17 +63,19 @@ html
             p#login 登入
 
     #background-element
-      #bubbles
-        #gb1.bbox
-          span#grey-bubble1.grey-bubble 
-        #gb2.bbox
-          span#grey-bubble2.grey-bubble
-        #gb3.bbox
-          span#grey-bubble3.grey-bubble
-        #gb4.bbox
-          span#grey-bubble4.grey-bubble 
-        #wb1.bbox
-        span#white-bubble1
+      //-
+        #bubbles
+          #gb1.bbox
+            span#grey-bubble1.grey-bubble
+          #gb2.bbox
+            span#grey-bubble2.grey-bubble
+          #gb3.bbox
+            span#grey-bubble3.grey-bubble
+          #gb4.bbox
+            span#grey-bubble4.grey-bubble
+          #wb1.bbox
+          span#white-bubble1
+      #login-leftpic
       #introduction <!-- join us.. -->
         h1 加入Connect
         p.description 幫想做的事找個夥伴！
