--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -93,7 +93,9 @@ footer
     flex-direction: row
     justify-content: space-evenly
     align-items: center
-    background-color: rgba(255, 219, 208, 1)
+    background-color: white
+    //rgba(255, 219, 208, 1)
+    border: solid 0.2vw #FFCFBF
     width: 100%
     height: 12%
     border-radius: 1.5vw
@@ -133,7 +135,7 @@ footer
       height: 3.5vw
       width: 48vw
       border-radius: 1.2vw
-      background-color: rgba(247, 247, 247, 1)
+      background-color: #EEEEEE
       cursor: pointer
       border: none
       text-align: left
@@ -155,7 +157,9 @@ footer
     flex-wrap: nowrap
     align-content: center
     align-items: stretch
-    background-color: rgba(255, 219, 208, 1)
+    background-color: white
+    //rgba(255, 219, 208, 1)
+    border: solid 0.2vw #FFCFBF
     width: 100%
     
     border-radius: 1.5vw  
@@ -166,14 +170,14 @@ footer
       justify-content: flex-end
       align-items: center
       margin: 1.5vw 1vw 0.5vw 1vw
-      background-color: rgba(255, 219, 208, 1)
+      background-color: transition
       
       p
         margin-right: 0
         font-size: 1.2vw
       
       .line
-        background-color: rgba(255, 219, 208, 1)
+        //background-color: rgba(255, 219, 208, 1)
         align: center
         height: 0.2vw
         //margin: 0 1vw
@@ -215,7 +219,7 @@ footer
       #eventpost:hover
         position: relative
         transform: scale(1.01)
-        box-shadow: 0.3vw 0.45vw 0.4vw 0.1vw rgba(150, 150, 150, 0.7)
+        box-shadow: 0.25vw 0.35vw 0.4vw 0.1vw rgba(150, 150, 150, 0.5)
       
       #eventpost
         display: flex
