--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -395,7 +395,7 @@ footer
       flex-direction: row
       align-items: flex-end
       justify-content: space-between
-      background-color: white
+      background-color: var(--background-color)
       z-index: 0
       
       .tag
