--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -32,6 +32,15 @@ body
   color: #FFCFBF
   opacity: 1
 
+#login-leftpic
+  width: 45vw
+  repeate: no-repeat
+  position: absolute
+  transform: translate(-50%, -50%)
+  top: 58%
+  left: 28%
+  z-index: 1
+
 #bubbles
   position: fixed
   transform: translate(-50%, -50%)
@@ -121,11 +130,26 @@ body
   left: 32%
   text-align: center
   width: 20vw
-  h1
-    font-size: 3vw
-  p
-    font-size: 1.3vw
-    margin-top: 1vw
+.description-head
+  font-size: 2.5vw
+  position: absolute
+  transform: translate(-50%, -50%)
+  z-index: 1
+  top: 30%
+  left: 17%
+  text-align: center
+  width: 20vw
+.description
+
+  font-size: 0.9vw
+  margin-top: 1vw
+  position: absolute
+  transform: translate(-50%, -50%)
+  z-index: 1
+  top: 60%
+  left: 45%
+  text-align: left
+  width: 15vw
 
 #panel1
   display: flex
