--- a/templates/login.pug
+++ b/templates/login.pug
@@ -75,12 +75,16 @@ html
             span#grey-bubble4.grey-bubble
           #wb1.bbox
           span#white-bubble1
-      #login-leftpic
-      #introduction <!-- join us.. -->
-        h1 加入Connect
-        p.description 幫想做的事找個夥伴！
+      image#login-leftpic(src="{% static 'file/login-leftpic.png' %}")
       
-
+      h1.description-head 現在就加入 CONNECT
+      .description 
+        p 想出遊但找不到同伴? 
+        p 想參加競賽但不知道找誰一起? 
+        p 想逛costco需要找有卡的人?
+        br
+        p 加入Connect發起活動與專案，
+        p 讓你找到同伴一起完成你想做的事!
     
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
