--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -122,25 +122,19 @@ body
   background-color: #FFFFFF
   display: block
 
-#introduction
-  position: absolute
-  transform: translate(-50%, -50%)
-  z-index: 1
-  top: 54%
-  left: 32%
-  text-align: center
-  width: 20vw
 .description-head
-  font-size: 2.5vw
   position: absolute
   transform: translate(-50%, -50%)
+  top: 35%
+  left: 21%
   z-index: 1
-  top: 30%
-  left: 17%
-  text-align: center
-  width: 20vw
-.description
+  h1
+    font-size: 2.5vw
+    text-align: left
+    width: 20vw
+    margin-bottom: 1vw
 
+.description
   font-size: 0.9vw
   margin-top: 1vw
   position: absolute
@@ -150,6 +144,8 @@ body
   left: 45%
   text-align: left
   width: 15vw
+  p
+    margin-bottom: 0.4vw
 
 #panel1
   display: flex
@@ -164,8 +160,8 @@ body
   width: 25vw
 
 #sign-up-panel
-  background-color: #FFCFBF
-  border: 0.2vw solid #FFFFFF
+  background-color: white
+  border: 0.2vw solid #FFC5B2
   box-shadow: 5px 10px 25px 0px #00000026
   border-radius: 3vh
   display: flex
@@ -180,7 +176,7 @@ body
     font-size: 3vw
     margin: 1vw 0 1vw 0   
   hr
-    background-color: black
+    border-top: #FFC5B2 solid 0.15vw
     margin-bottom: 1vw
 
   form 
@@ -195,7 +191,7 @@ body
     outline: none
     text-indent: 1em
     padding: 5px 0px 5px 0px
-    border: 0
+    border: 0.15vw solid #FFC5B2
     margin: 0.5vw 0.5vw 0
   
   .err-msg
@@ -267,8 +263,8 @@ body
   
 
 #login-panel
-  background-color: #FFCFBF
-  border: 0.2vw solid #FFFFFF
+  background-color: white
+  border: 0.2vw solid #FFC5B2
   box-shadow: 5px 10px 25px 0px #00000026
   border-radius: 3vh
   display: flex
@@ -283,7 +279,7 @@ body
     font-size: 3vw
     margin: 1vw 0 2vw 0   
   hr
-    background-color: black
+    border-top: #FFC5B2 solid 0.15vw
 
   form 
     display: flex
@@ -297,7 +293,7 @@ body
     outline: none
     text-indent: 1em
     padding: 5px 0px 5px 0px
-    border: 0
+    border: 0.15vw solid #FFC5B2
   .input-description
     margin: 1.5vw 0 0.5vw 0
     font-size: 1.3vw
