--- a/templates/login.pug
+++ b/templates/login.pug
@@ -33,7 +33,7 @@ html
             p#sign-up 註冊
       
       #sign-up-panel(style="display: none")
-        form(action="", method="post") {% csrf_token %}
+        form(action="", method="post", autocomplete="off") {% csrf_token %}
           h1 註冊
           hr.solid
           label(for='fname')
@@ -77,7 +77,9 @@ html
           span#white-bubble1
       image#login-leftpic(src="{% static 'file/login-leftpic.png' %}")
       
-      h1.description-head 現在就加入 CONNECT
+      .description-head 
+        h1 現在就加入 
+        h1 CONNECT
       .description 
         p 想出遊但找不到同伴? 
         p 想參加競賽但不知道找誰一起? 
