--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -320,13 +320,13 @@ footer
   display: none
   position: fixed
   border-radius: 50%
-  right: 20px
-  bottom: 30px
+  right: 3vw
+  bottom: 5vw
   width: 4vw
   height: 4vw
-  font-size: 3vw
-  background: rgba(250, 173, 149, 1)
-  color: rgba(0, 0, 0, 1)
+  //font-size: 3vw
+  //background: rgba(250, 173, 149, 1)
+  //color: rgba(0, 0, 0, 1)
   cursor: pointer
   z-index: 5
   text-align: center
@@ -336,7 +336,8 @@ footer
     color: #666666
 
 #gotop:hover
-  background-color: #ffdbd0
+  opacity: 0.65
+  //background-color: #ffdbd0
   
   
 #filter1
