fix gotop hover

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -335,8 +335,8 @@ footer
     top: 30%
     color: #666666
 
-#gotop:hover
-  opacity: 0.65
+//#gotop:hover
+  //opacity: 0.65
   //background-color: #ffdbd0
   
   
@@ -401,6 +401,7 @@ footer
         p
           font-size: 1vw
           line-height: 8vw
+          text-align: center
           background-color: #EFFFFB
           
     
@@ -440,8 +441,9 @@ footer
       
     #event-detail
       font-size: 1.2vw
+      line-height: 1.5vw
       min-height: 3vw
-      max-height: 4.5vw
+      max-height: 6.5vw
       margin: 2.2vw 0 0 1vw
       
       overflow: scroll
@@ -457,7 +459,8 @@ footer
       justify-content: flex-start;
       
       width: 95%
-      height: 15vw
+      max-height: 15vw
+      min-height: 10vw
       background-color: #EFFFFB
       border-radius: 1.5vw
       padding: 0.5vw
@@ -628,8 +631,8 @@ footer
       #bar
         width: 2.5vw
         height: 0.2vw
-        background-color: #555555
-        border-radius: 0.05vw
+        background-color: #AAAAAA
+        border-radius: 0.1vw
         margin-bottom: 0.4vw
       
       #member
