can modify department and grade

--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -183,6 +183,17 @@ footer
           #grade
             font-size: 1vw
             line-height: 1.2vw
+          
+          input
+            width: 6vw
+            border-radius: 3vw
+            outline: none
+            border: none
+            padding: 0.3vw 0 0.3vw 1vw
+
+            background-color: var(--background-color-field)
+          input::placeholder
+            font-size: 0.8vw
       
       #description-tag
         display: flex
