--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -445,6 +445,7 @@ footer
       min-height: 3vw
       max-height: 6.5vw
       margin: 2.2vw 0 0 1vw
+      width: 98%
       
       overflow: scroll
       overflow-x: hidden
