add navbar.js, modify some .js

--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -133,3 +133,4 @@ html
     //- script(src="https://apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js")
     //- script(src="https://apps.bdimg.com/libs/jquerymobile/1.4.5/jquery.mobile-1.4.5.min.js")
     script(src="{% static 'js/homepage.js' %}")
+    script(src="{% static 'js/navbar.js' %}")
