--- a/templates/login.pug
+++ b/templates/login.pug
@@ -92,3 +92,4 @@ html
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js")
     script(src="{% static 'js/login.js' %}")
+    script(src="{% static 'js/navbar.js' %}")
