modify ajax into a new way that duplicate div then modify attribute from .js

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -216,12 +216,12 @@ footer
       margin: 0 7vw
       margin-bottom: 7vw
       
-      #eventpost:hover
+      .eventpost:hover
         position: relative
         transform: scale(1.01)
         box-shadow: 0.25vw 0.35vw 0.4vw 0.1vw rgba(150, 150, 150, 0.5)
       
-      #eventpost
+      .eventpost
         display: flex
         flex-direction: column
         flex-wrap: nowrap
@@ -241,7 +241,7 @@ footer
         p
           //margin-bottom: 0.3vw
         
-        #posttop
+        .posttop
           transform: translate(0, calc(-1vw - 1px))
           width: 14vw
           padding: 1vw 1.5vw 0.3vw 1.5vw
@@ -282,7 +282,7 @@ footer
             text-align: right
         
             
-        #postbottom
+        .postbottom
           display: flex
           flex-direction: row
           flex-wrap: nowrap
@@ -310,7 +310,7 @@ footer
       a
         margin-left: 0
       #virtualdiv
-        #eventpost
+        .eventpost
           box-shadow: none
         *
           background: none
