--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -101,22 +101,18 @@ html
           script.
             $('a').on("click", function() {
               console.log(this.id);
-              $("#eventwindow").show();
-              //$("#filter1").show();
               event_handler("event/" + this.id, this.id, "{{ csrf_token }}");
               
               
+              $("#eventwindow").css({'display': 'flex'});
+              $("#eventwindow").css({'opacity': 1});
+              $("#filter1").show();
+              $("#filter1").css({'opacity': 1});
             });
           
           #virtualdiv
             .eventpost
             
-                
-        
-        
-
-    .event-detail    
-      {% include 'event_detail.pug' %}
     {% load static %}
     image#gotop(src="{% static 'file/gotop.png' %}")
     {% if request.user.is_authenticated %}
@@ -135,6 +131,115 @@ html
     {% endif %}
     footer
       {% include "footer.pug" %}
+      
+    .event-detail
+      #eventwindow
+        #eventwindow-left
+          #eventwindow-bg
+            #eventpic
+              img.pic
+              p 目前沒有圖片
+          #description
+            #description-top
+              #event-title {{ event_detail.title }}
+              #event-date 活動日期
+                br
+                | {{ event_detail.event_date }}
+            #event-subtitle {{ event_detail.subtitle }}
+            #event-detail {{ event_detail.detail }}
+          #eventmsgregion
+            p#msgtitle 留言板
+            #eventmsg-board
+              {% for eventmsg in event_detail.board_message.all reversed %}
+              .eventmsg#eventmsg
+                a(href="{% url 'profile' id=eventmsg.author.pk %}")
+                  img.sender(src='{{ eventmsg.author.img.url }}')
+                #eventmsg-right
+                  #eventmsg-righttop
+                    a#eventmsg-sendername(href="{% url 'profile' id=eventmsg.author.pk %}") {{ eventmsg.author.full_name }}
+                    p#event-date {{ eventmsg.date }}
+                  #eventmsg-rightbottom
+                    p#eventmsgtext {{ eventmsg.text }}
+              {% empty %}
+              
+              .eventmsg
+                #eventmsg-right
+                  #eventmsg-righttop
+                    p#event-date 目前沒有留言喔～
+              
+              {% endfor %}
+              
+          #eventmsg-sender
+            {% if request.user.is_authenticated %}
+            a(href="{% url 'profile' id=request.user.userextend.pk %}")
+              img#senderpic(src="{{ request.user.userextend.img.url }}")
+            {% else %}
+            img#senderpic
+            {% endif %}
+            {% if request.user.is_authenticated %}
+            .comment-operate-region
+              input.eventmsg-insert(type="text", name='text', placeholder="傳送訊息...")
+              input.eventmsg-btn(type="button", value="送出")
+              script.
+                $(document).ready(function(){
+                  $(".eventmsg-btn").on("click", function() {
+                  })
+                })
+            {% else %}
+            a.comment-operate-region(href="{% url 'login' %}")
+              input.eventmsg-insert(type="text", name='text', placeholder="傳送訊息...")
+              input.eventmsg-btn(type="submit", value="送出")
+            {% endif %}
+            
+        #eventwindow-right
+          #joinevent-btn
+          
+          #eventoperate
+            a
+              img#exitbtn1(src="{% static 'file/exiticon.png' %}")
+              
+            a(href="#")
+              img#organizer.member(src='{{ event_detail.host.img.url }}')
+            #bar
+            #member
+              
+              
+              {% for participant in event_detail.participants.all %}
+              a(href="{% url 'profile' id=participant.pk %}")
+                img.member.participant(src='{{ participant.img.url }}')
+              {% endfor %}
+
+              {% for interested_user in event_detail.likes.all %}
+              a(href="{% url 'profile' id=interested_user.pk %}")
+                img.member.interested(src='{{ interested_user.img.url }}')
+              {% endfor %}
+            {% if request.user.is_authenticated %}
+            
+            {% if event_detail in request.user.userextend.event_like.all %}
+            #likebutton(style="background-image: url('/static/file/like-bg-y.png')")
+              button(type="image", src="{% static 'file/like-bg-n.png' %}", alt="Submit Form",name="event_id", value="{{ event_detail.id }}")
+                span#like-img
+            {% else %}
+            #likebutton(style="background-image: url('/static/file/like-bg-n.png')")
+              button(type="image", src="{% static 'file/like-bg-n.png' %}", alt="Submit Form",name="event_id", value="{{ event_detail.id }}")
+                span#like-img
+            {% endif %}
+            script.
+              $(document).ready(function(){
+                $("#likebutton").on("click", function() {
+                  like_handler("{% url 'like' %}", "{{ csrf_token }}", "{{ event_detail.id }}");
+                })
+              })
+            // user not authenticated
+            {% else %}
+            a.login-redirect(href="{% url 'login' %}")
+            #likebutton(style="background-image: url('/static/file/like-bg-n.png')", href="{% url 'login' %}")
+              form(action="", method="POST")
+                button(type="image", src="{% static 'file/like-bg-n.png' %}", alt="Submit Form",name="event_id", value="{{ event_detail.id }}")
+            {% endif %}
+      #filter1
+        
+      
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js")
