fix eventwindow organizer ajax prob

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -351,7 +351,7 @@ footer
   z-index: 6
 
 #eventwindow
-  display: flex
+  display: none
   position: fixed
   flex-direction: row
   flex-wrap: nowrap
@@ -621,7 +621,7 @@ footer
         cursor: pointer
       
       
-      #organizer
+      #organizer-pic
         width: 3vw
         height: 3vw
         margin-bottom: 0.4vw
@@ -663,6 +663,8 @@ footer
         width: 4vw
           
       #likebutton
+        position: absolute
+        bottom: 5%
         background-image: url('../file/like-bg-n.png')
         background-repeat: no-repeat
         background-size: contain
